[package]
name = "flux"
version = "1.1.0"
edition = "2021"
description = "Persistent PowerShell sessions for Windows — detach and reattach like tmux."
license = "MIT"

[[bin]]
name = "fx"
path = "src/main.rs"

[dependencies.windows-sys]
version = "0.59"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Storage_FileSystem",
    "Win32_System_Console",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_IO",
    "Win32_System_Memory",
    "Win32_System_Pipes",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
]

[profile.release]
opt-level = "z"
lto = true
strip = true
panic = "abort"
